# Chess-Mate

./: .gitignore  .plan.md.un~  ARCH_CANDIDATES.md  CLAUDE.md  binding.gyp  electron-builder.json  eslint.config.js  index.html  package-lock.json  package.json  plan.md  plan.md~  prd.md  tsconfig.app.json  tsconfig.json  tsconfig.node.json  types.d.ts  vite.config.ts  vitest.config.ts
docs/: cpp-tests.md
docs/issues/: 01-deselect-fix.md  02-turn-indicator.md  03-check-feedback.md  04-game-result-state.md  05-game-end-modal.md  06-redo-stack.md  07-resign-and-draw.md  publish.ps1
src/addon/: board.cpp  board.h  chess_engine.cc
src/main/: events.ts  main.ts  preload.cts  tsconfig.json
src/renderer/: App.tsx  globals.d.ts  main.tsx  types.ts
src/renderer/components/: BoardClass.test.ts  BoardClass.ts  ChessBoard.tsx  Game.test.ts  Game.ts  GameEndModal.tsx  GameManager.test.tsx  GameManager.tsx  MainMenu.test.tsx  MainMenu.tsx  PastMoveTable.test.tsx  PastMoveTable.tsx  Piece.tsx  ResignConfirmModal.tsx  board.scss  utils.test.ts  utils.ts
src/renderer/styles/: app.scss  chess.scss
tests/: CMakeLists.txt  board_test.cpp  build-and-run.ps1
